<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="center"
            android:text="@string/title_ssid"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_label"
            android:layout_margin="25dp"
            android:layout_height="35dp" />
        <Spinner
            android:id="@+id/spinnerRouterSSID02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingLeft="12dp"
            android:textColor="@color/color_white"
            android:visibility="visible" />
        <TextView
            android:id="@+id/tv_wlan"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:drawableRight="@drawable/arrow"
            />
        <Button
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/confirm"
            android:id="@+id/confirm"
            />
    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/title_color"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="20dp">

            <!-- Device SSID -->

            <!-- Router SSID -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/title_ssid"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_size_label" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/editTextRouterSSID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/edit_hint_input_ssid"
                    android:paddingLeft="2dp"
                    android:textColor="@color/color_white"
                    android:textColorHint="#B9B9B9"
                    android:textSize="@dimen/text_size_label">

                    <requestFocus />
                    <!--android:background="@null" /-->
                </EditText>

                <Spinner
                    android:id="@+id/spinnerRouterSSID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/color_white"
                    android:visibility="gone" />
                <!-- include
                    android:id="@+id/layoutEditRouterSSID"
                    show_pic_item_layout="@show_pic_item_layout/layout_edittext"
                    android:paddingLeft="12dp"
                    android:layout_weight="1" / -->

            </TableRow>

            <!--TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/xml_dot_divider"
                    android:layout_weight="1" />
            </TableRow-->

            <!-- Password -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/title_password"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_size_label" />

                <EditText
                    android:id="@+id/editTextPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:hint="@string/edit_hint_input_pwd"
                    android:textColor="@color/color_white"
                    android:textColorHint="#B9B9B9"
                    android:textSize="@dimen/text_size_label" />

                <!-- include
                    android:id="@+id/layoutEditPwd"
                    show_pic_item_layout="@show_pic_item_layout/layout_edittext"
                    android:layout_weight="1" / -->
            </TableRow>

            <Button
                android:id="@+id/btnSetup"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/xml_btn_setup"
                android:text="@string/btn_ssid_setup"
                android:textSize="@dimen/text_size_label" />


            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/title_channel"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_size_label" />

                <Spinner
                    android:id="@+id/setDeviceChannelSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/color_white" />


            </TableRow>

            <Button
                android:id="@+id/channelbtnSetup"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="left"
                android:layout_marginBottom="20dp"
                android:background="@drawable/xml_btn_setup"
                android:text="@string/btn_channel_setup"
                android:textSize="@dimen/text_size_label" />
        </TableLayout>

        <!-- LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center" -->


        <!-- /LinearLayout -->
    </LinearLayout>
</LinearLayout>